<resources>
    <string name="app_name">Project5</string>
    <string name="subtotal">Subtotal: </string>\
    <string name="storeorders">Store Orders</string>
    <string name="rucafe">RU CAFE</string>
    <string name="donutmenu">Donut Menu</string>
    <string name="basket">Your Order</string>
    <string name="tax">Sales Tax:</string>
    <string name="total">Total:</string>
    <string name="coffeemenu">Coffee Menu</string>
    <string name="empty_basket_error_title">Basket is empty!</string>
    <string name="item_view_removal">Remove</string>
    <string name="quantity">Quantity:</string>
    <string name="toast_order_removed">Order removed.</string>
    <string name="toast_item_removed_basket">Item removed.</string>
    <string name="coffee_sweetcream">Sweet Cream</string>
    <string name="coffee_irishcream">Irish Cream</string>>
    <string name="coffee_frenchvanilla">French Vanilla</string>
    <string name="coffee_mocha">Mocha</string>
    <string name="coffee_caramel">Caramel</string>
    <string name="coffee_added">Coffee has been added to the basket!</string>
    <string-array name="sizeArray">
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>

    <string name="donutWrappers">Donuts</string>
    <string-array name="flavorNames">
        <item>Plain</item>
        <item>Cruller</item>
        <item>Glazed</item>
        <item>Chocolate</item>
        <item>Vanilla Frosting</item>
        <item>Chocolate Frosting</item>
        <item>Strawberry Frosting</item>
        <item>Boston Creme</item>
        <item>Jelly</item>
        <item>Lemon</item>
        <item>Powdered</item>
        <item>Blueberry</item>
    </string-array>
</resources>