<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffeemenu"
            android:gravity="center"
            android:textSize="70px"
            android:layout_marginTop="20px"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/coffeeImage"
            android:layout_width="match_parent"
            android:layout_height="279dp"
            app:srcCompat="@drawable/coffee2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/sweetcream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/coffee_sweetcream" />

            <CheckBox
                android:id="@+id/frenchvanilla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/coffee_frenchvanilla" />

            <CheckBox
                android:id="@+id/irishcream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/coffee_irishcream" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/caramel"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:text="@string/coffee_caramel" />

            <CheckBox
                android:id="@+id/mocha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/coffee_mocha" />

        </LinearLayout>

        <Spinner
            android:id="@+id/cupSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/coffeequantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/subtotal"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/coffeeSubtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/addToOrderBTN"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:text="Add to Order"
            android:layout_gravity="center"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>