<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100px"
            android:layout_marginBottom="300px"
            android:gravity="top"
            android:text="@string/basket"
            android:textSize="70px"
            android:textColor="@color/black"/>

        <ListView
            android:id="@+id/ordersListView"
            android:layout_width="match_parent"
            android:layout_height="362dp" />

        <LinearLayout
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="25px">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/subtotal"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txtSubTotal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tax"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txtTax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/total"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:textColor="@color/black"/>
        </LinearLayout>

        <Button
            android:id="@+id/placeOrderBTN"
            android:layout_width="321dp"
            android:layout_height="56dp"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="25px"
            android:layout_marginBottom="100px"
            android:text="Place Order" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>